# MAI-cpp-oop-labs6

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: NPC.cpp.80EF5932DE86021A.idx  NPC.h.AAFA4EDBAE1EA428.idx  NPCCreator.h.40D39A182C5A84C2.idx  NPCFactory.cpp.96DEF65D4D48DDC7.idx  NPCFactory.h.07D7A81F9841B436.idx  battleLogger.h.7E102150A6618EB3.idx  battleVisitor.cpp.B3FA036436A198AD.idx  battleVisitor.h.0A8490BCFB03763C.idx  consoleLogger.h.4C220DF411D1FB41.idx  dragon.cpp.3A900BFA152E6625.idx  dragon.h.D67C4817CAC31CF9.idx  dragonCreator.cpp.E145981599A22631.idx  dragonCreator.h.5BD0717B3F1F4BAF.idx  druid.cpp.49E6B5EC7781C974.idx  druid.h.3568A48C8D56DCEC.idx  druidCreator.cpp.A1A1B06FBFF37ACD.idx  druidCreator.h.25A7F84EAE894D2E.idx  elf.cpp.63908B47FB84B664.idx  elf.h.8736A9C7F514AA38.idx  elfCreator.cpp.8873343889297FE4.idx  elfCreator.h.295C2D00A7462055.idx  factory_test.cpp.BD78661FAE847D6F.idx  fileLogger.h.1F145244393D9113.idx  geom_test.cpp.49F84A34AA9D0870.idx  main.cpp.5214FBAF9911F525.idx  main_test.cpp.83EE097CFE93F1BC.idx  npc_test.cpp.9A5F0C0969B85E66.idx  observer.h.31A30C5A93C44F2E.idx  observer_test.cpp.1B9B1DEF1BB523E5.idx  point.h.9E6E1D992C5B7CE8.idx  subject.cpp.15CFBCD096A40443.idx  subject.h.B00A8950EB6B83F7.idx  test_lab.cpp.5AFF65EB72066A26.idx  visitor.h.0CEA19710CFBDFDB.idx  visitor_test.cpp.498B33B1347ABA0B.idx
.devcontainer/: Dockerfile  devcontainer.json
data/: test_log.txt  test_save.txt
include/factory/: NPCCreator.h  NPCFactory.h  dragonCreator.h  druidCreator.h  elfCreator.h
include/geom/: point.h
include/npc/: NPC.h  dragon.h  druid.h  elf.h
include/observer/: battleLogger.h  consoleLogger.h  fileLogger.h  observer.h  subject.h
include/visitor/: battleVisitor.h  visitor.h
src/factory/: NPCFactory.cpp  dragonCreator.cpp  druidCreator.cpp  elfCreator.cpp
src/npc/: NPC.cpp  dragon.cpp  druid.cpp  elf.cpp
src/observer/: subject.cpp
src/visitor/: battleVisitor.cpp
tests/: test_lab.cpp
